--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1 style="font-family: arial;">Site is under construction</h1>
+<style>
+  h1 {
+     font-family: arial; 
+  }
+</style>
+<h1>Site is under construction</h1>
