--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
+<html>
+<head>
 <title>We are very sorry</title>
 <style>
   h1 {
      font-family: arial; 
   }
+  body {
+    color: white;
+    background-color: black;
+  }
 </style>
+</head>
+<body>
 <h1>Site is under construction</h1>
+</body>
+</html>
