--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="icon" type="image/x-icon" href="disp.png">
+<link rel="icon" type="image/x-icon" src="disp.png">
 <title>We are very sorry</title>
 <style>
   h1 {
