--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'>
- <link rel="icon" type="image/x-icon" href="disp.png">
+<link rel="shortcut icon" href="disp.png">
 <title>TiBiTs - The game that is currently under construction!</title>
 <style>
     /*
